Update styling and breadcrumbs

--- a/ds1/boss-guides/lord_souls/landing-page.html
+++ b/ds1/boss-guides/lord_souls/landing-page.html
@@ -37,7 +37,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-image: url("../bg_img.jpg");
+            background-image: url("../../bg_img.jpg");
             background-size: contain;
             background-position: center;
             filter: blur(10px);
@@ -182,9 +182,10 @@
     </header>
 
     <div class="breadcrumbs">
-        <a href="../../index.html">Home</a> >
-        <a href="../landing-page.html">Dark Souls: Remastered</a> >
-        Boss Guides
+        <a href="../../../index.html">Home</a> >
+        <a href="../../landing-page.html">Dark Souls: Remastered</a> >
+        <a href="../landing-page.html">Boss Guides</a> >
+        Lord Soul Bosses
     </div>
 
     <div class="game-info">
@@ -195,9 +196,9 @@
 
     <div class="navigation-container">
         <div class="navigation-grid">
-            <div class="navigation-card" onclick="window.location.href='01_asylum-demon.html'">
+            <div class="navigation-card" onclick="window.location.href='nito.html'">
                 <div class="navigation-header">
-                    <h3>Asylum Demon</h3>
+                    <h3>Nito, First of The Undead</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -205,14 +206,14 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating Asylum Demon</p>
+                        <p>Strategies for defeating Nito, First of The Undead</p>
                     </div>
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='02_taurus-demon.html'">
+            <div class="navigation-card" onclick="window.location.href='bed-of-chaos.html'">
                 <div class="navigation-header">
-                    <h3>Taurus Demon</h3>
+                    <h3>Bed of Chaos</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -220,14 +221,14 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating Taurus Demon</p>
+                        <p>Strategies for defeating Bed of Chaos</p>
                     </div>
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='03_gargoyles.html'">
+            <div class="navigation-card" onclick="window.location.href='seath.html'">
                 <div class="navigation-header">
-                    <h3>Gargoyles</h3>
+                    <h3>Seath The Scaleless</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -235,14 +236,14 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating Gargoyles</p>
+                        <p>Strategies for defeating Seath The Scaleless</p>
                     </div>
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='04.html'">
+            <div class="navigation-card" onclick="window.location.href='4-kings.html'">
                 <div class="navigation-header">
-                    <h3>Capra Demon</h3>
+                    <h3>4 Kings</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -250,13 +251,13 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating Capra Demon</p>
+                        <p>Strategies for defeating 4 Kings</p>
                     </div>
                 </div>
 
             </div>
         </div>
-        <a href="../landing-page.html" class="back-button">Back to All DS1 Guides</a>
+        <a href="../landing-page.html" class="back-button">Back to All DS1 Boss Guides</a>
 
         <footer>
             <p>Thou who art Undead, art chosen. In thine exodus from the Undead Asylum, maketh pilgrimage to the land of
