--- a/ds1/boss-guides/07.html
+++ b/ds1/boss-guides/07.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[guide name] guide</title>
+    <title>Iron Golem guide</title>
     <style>
         :root {
             --background: #121212;
@@ -167,14 +167,14 @@
     <div class="breadcrumbs">
         <a href="../../index.html">Home</a> >
         <a href="../landing-page.html">Dark Souls: Remastered</a> > <a href="landing-page.html">Boss Guides</a> >
-        [guide name] guide
+        Iron Golem guide
     </div>
 
     <div class="guide-container">
         <div class="guide-header">
             <div class="guide-info">
-                <h2 class="guide-title">[guide name] guide</h2>
-                <p class="guide-description">[guide name] guide</p>
+                <h2 class="guide-title">Iron Golem guide</h2>
+                <p class="guide-description">Iron Golem guide</p>
             </div>
             <span class="difficulty-tag">[diff]</span>
         </div>
