--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -58,6 +58,17 @@
             margin-top: 0;
         }
 
+        .back-link {
+            display: inline-block;
+            margin-bottom: 20px;
+            color: var(--primary-text);
+            text-decoration: none;
+        }
+
+        .back-link:hover {
+            text-decoration: underline;
+        }
+
         .achievement-card {
             background-color: var(--card-bg);
             border-radius: 8px;
@@ -215,6 +226,7 @@
 
 <body>
     <div class="container">
+        <a href="../index.html" class="back-link">← Back to Home</a>
         <header>
             <h1 class="main-title">GBFR 100% Completion Guide</h1>
             <p class="subtitle">Track your progress through Granblue Fantasy Relink</p>
@@ -224,6 +236,8 @@
             <div class="search-container">
                 <input type="text" id="achievement-search" class="search-input" placeholder="Search achievements...">
             </div>
+
+            <!-- Story Achievements -->
 
             <h2>Story Achievements</h2>
 
@@ -317,8 +331,9 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="Chapter 10">
-                <h3 class="achievement-title"><a href="#" onclick="toggleAchievementDetails('chapter10')">Chapter 10</a>
+            <div class="achievement-card" data-name="Final Chapter">
+                <h3 class="achievement-title"><a href="#" onclick="toggleAchievementDetails('chapter10')">Final
+                        Chapter</a>
                 </h3>
                 <label class="toggle-container">
                     <input type="checkbox" id="chapter10-toggle" data-achievement="chapter10"
@@ -326,6 +341,31 @@
                     <span class="toggle-slider"></span>
                 </label>
             </div>
+
+            <div class="achievement-card" data-name="Chapter 0">
+                <h3 class="achievement-title"><a href="#" onclick="toggleAchievementDetails('chapter0')">Chapter Ø</a>
+                </h3>
+                <label class="toggle-container">
+                    <input type="checkbox" id="chapter0-toggle" data-achievement="chapter0"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <!-- Combat Achievements -->
+
+            <h2>Combat Achievements</h2>
+
+            <div class="achievement-card" data-name="In Perfect Sync">
+                <h3 class="achievement-title"><a href="achievements/combat/index.html">In Perfect Sync</a></h3>
+                <label class="toggle-container">
+                    <input type="checkbox" id="fieldnotes-toggle" data-achievement="fieldnotes"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <!-- Special Achievements -->
 
             <h2>Special Achievements</h2>
 
@@ -337,6 +377,8 @@
                     <span class="toggle-slider"></span>
                 </label>
             </div>
+
+            <!-- Progress Bar -->
 
             <div id="completion-status">
                 <div class="progress-bar-container">
