--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -82,6 +82,30 @@
             align-items: center;
         }
 
+        .achievement-container {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .achievement-header {
+            display: flex;
+            align-items: center;
+        }
+
+        .achievement-subtitle {
+            color: var(--secondary-text);
+            font-size: 0.9rem;
+            margin: 0;
+            margin-top: 2px;
+        }
+
+        .achievement-percentage {
+            color: #999999;
+            font-size: 0.9rem;
+            margin-left: 10px;
+        }
+
         .achievement-card:hover {
             background-color: var(--hover-color);
             transform: translateY(-2px);
