Add new header text

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -261,9 +261,9 @@
                 <input type="text" id="achievement-search" class="search-input" placeholder="Search achievements...">
             </div>
 
-            <!-- Story Achievements -->
+            <!-- All Achievements -->
 
-            <h2>Story Achievements</h2>
+            <h2>All Achievements, sorted by playerbase completion (descending)</h2>
 
             <div class="achievement-card" data-name="Chapter 1">
                 <div class="achievement-container">
