Implement 2 achievements to test

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -355,7 +355,41 @@
 
             <!-- All Achievements -->
 
-            <h2>All Achievements, sorted by playerbase completion (descending)</h2>
+            <h2>All Achievements, sorted by [method]</h2>
+
+            <div class="achievement-card" data-name="The Forgotten Sky">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="#" onclick="toggleAchievementDetails('chapter1')">The Forgotten Sky</a>
+                        </h3>
+                        <span class="achievement-percentage">96.2%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Prologue of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="chapter1-toggle" data-achievement="chapter1"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="On the Road to Mastery">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="#" onclick="toggleAchievementDetails('chapter1')">On the Road to Mastery</a>
+                        </h3>
+                        <span class="achievement-percentage">85.9%</span>
+                    </div>
+                    <p class="achievement-subtitle">Unlock a character action node from Masteries for the first time</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="chapter1-toggle" data-achievement="chapter1"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
 
             <div class="achievement-card" data-name="Chapter 1">
                 <div class="achievement-container">
@@ -363,7 +397,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -380,7 +414,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -397,7 +431,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -414,7 +448,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -431,7 +465,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -448,7 +482,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -465,7 +499,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -482,7 +516,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -499,7 +533,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -516,7 +550,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -533,7 +567,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -550,7 +584,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -567,7 +601,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -584,7 +618,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -601,7 +635,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -618,7 +652,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -635,7 +669,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -652,41 +686,7 @@
                         <h3 class="achievement-title">
                             <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
                         </h3>
-                        <span class="achievement-percentage">87%</span>
-                    </div>
-                    <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
-                </div>
-                <label class="toggle-container">
-                    <input type="checkbox" id="chapter1-toggle" data-achievement="chapter1"
-                        onchange="toggleAchievement(this)">
-                    <span class="toggle-slider"></span>
-                </label>
-            </div>
-
-            <div class="achievement-card" data-name="Chapter 1">
-                <div class="achievement-container">
-                    <div class="achievement-header">
-                        <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
-                        </h3>
-                        <span class="achievement-percentage">87%</span>
-                    </div>
-                    <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
-                </div>
-                <label class="toggle-container">
-                    <input type="checkbox" id="chapter1-toggle" data-achievement="chapter1"
-                        onchange="toggleAchievement(this)">
-                    <span class="toggle-slider"></span>
-                </label>
-            </div>
-
-            <div class="achievement-card" data-name="Chapter 1">
-                <div class="achievement-container">
-                    <div class="achievement-header">
-                        <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
-                        </h3>
-                        <span class="achievement-percentage">87%</span>
+                        <span class="achievement-percentage">x.x%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
@@ -917,7 +917,7 @@
             });
         });
 
-        
+
 
         // Export data function for saving progress
         function exportData() {
