Add cards for testing

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -361,7 +361,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">The Forgotten Sky</a>
+                            <a href="#" onclick="toggleAchievementDetails('The Forgotten Sky')">The Forgotten Sky</a>
                         </h3>
                         <span class="achievement-percentage">96.2%</span>
                     </div>
@@ -378,7 +378,8 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">On the Road to Mastery</a>
+                            <a href="#" onclick="toggleAchievementDetails('On the Road to Mastery')">On the Road to
+                                Mastery</a>
                         </h3>
                         <span class="achievement-percentage">85.9%</span>
                     </div>
@@ -391,13 +392,15 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="Chapter 1">
+            <div class="achievement-card" data-name="The Western Frontier">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="#" onclick="toggleAchievementDetails('chapter1')">Chapter 1</a>
+                            <a href="achievements/chapter1.html">The
+                                Western
+                                Frontier</a>
                         </h3>
-                        <span class="achievement-percentage">x.x%</span>
+                        <span class="achievement-percentage">85.6%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Chapter 1 of the main story</p>
                 </div>
