Add background image to main page

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -28,6 +28,21 @@
             line-height: 1.6;
         }
 
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: url("gbfr_bg.png");
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
+            filter: blur(10px);
+            z-index: -1;
+        }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
